[package]
name = "google_cloud_logging"
version = "0.1.0"
authors = ["Ralph Bisschops <ralph.bisschops.dev@gmail.com>"]
edition = "2021"
description = "Google Cloud Structured Logging structures."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = [
    "google",
    "cloud",
    "logging",
    "log",
    "explorer",
    "error",
    "reporting",
]
categories = ["development-tools::debugging", "data-structures"]
repository = "https://github.com/ralpha/google_cloud_logging"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
log = { version = "0.4.14", features = ["std"] }
serde_json = "1.0.64"
